Add tmp file in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /CORE/WcfService1/.vs/WcfService1/v16/Server/sqlite3/db.lock
+/CORE/WcfService1/.vs/WcfService1/v16/.suo
+/CORE/WcfService1/PNPUCORE/Database1.mdf
+/CORE/WcfService1/PNPUCORE/Database1_log.mdf
+
