--- a/CORE/WcfService1/Dispatcher/Dispatcher.csproj
+++ b/CORE/WcfService1/Dispatcher/Dispatcher.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PNPUCore\PNPUCore.csproj">
+      <Project>{d75d6ea6-79d7-4b08-9968-482ae762dfc5}</Project>
+      <Name>PNPUCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
