--- a/CORE/WcfService1/PNPUCore/PNPUCore.csproj
+++ b/CORE/WcfService1/PNPUCore/PNPUCore.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="ControleMock.cs" />
+    <Compile Include="ControleTacheSecu.cs" />
     <Compile Include="IControle.cs" />
     <Compile Include="InfoClient.cs" />
     <Compile Include="IProcess.cs" />
@@ -51,6 +52,12 @@
     <Compile Include="ProcessMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThemeControle.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PNPUTools\PNPUTools.csproj">
+      <Project>{b0256ca4-bb09-4f83-a5aa-b1017c09607f}</Project>
+      <Name>PNPUTools</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
