--- a/CORE/WcfService1/WcfService1/bin/WcfService1.dll.config
+++ b/CORE/WcfService1/WcfService1/bin/WcfService1.dll.config
@@ -8,13 +8,35 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
+
   <system.serviceModel>
+    <services>
+      <service name="WcfService1.Service1" behaviorConfiguration="ServiceBehaviour">
+        <endpoint address ="" binding="webHttpBinding" contract="WcfService1.IService1" behaviorConfiguration="web">
+        </endpoint>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="ServiceBehaviour">
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
+  
+  <!--  <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- Pour éviter la divulgation d'informations de métadonnées, définissez les valeurs ci-dessous sur false avant le déploiement -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- Pour recevoir les détails de l'exception dans les erreurs à des fins de débogage, définissez la valeur ci-dessous sur true. Pour éviter la divulgation d'informations d'exception, définissez-la sur false avant le déploiement -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
@@ -24,6 +46,7 @@
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  -->
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
     <!--
